Adds .gitignote and fixes meta
* Added .gitignore file

so it handles vim .tags files

* Fixed meta/main.yml

Added galaxy info

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,21 @@
+---
+galaxy_info:
+  author: Michel Blanc
+  description: nginx role
+  company: ERASME/Grand-Lyon Métropole
+  license: MIT
+  min_ansible_version: 1.8
+
+  platforms:
+  - name: Ubuntu
+    versions:
+    - all
+  - name: Debian
+    versions:
+      - all
+  categories:
+    - development
+
 dependencies:
   - { role: erasme.php5-fpm, when: nginx_mode == 'php5-fpm' }
 
