Fixes badge and travis file
* Fixed wrong ling on Travis badge

* Attempting to override TRAVIS_REPO_SLUG so rolespec behaves like in
vagrant runs

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ script:
 - echo $TRAVIS_REPO_SLUG
 - git clone --depth 1 https://github.com/nickjj/rolespec
 - cd rolespec ; sudo make install; cd -
-- rolespec -i ~/testdir
+- TRAVIS_REPO_SLUG= rolespec -i ~/testdir
 - ln -s . ~/testdir/roles/ansible-nginx/"
 - ln -s tests/ansible-nginx/ ~/testdir/tests/
-- cd ~/testdir; rolespec -r ansible-nginx
+- cd ~/testdir; TRAVIS_REPO_SLUG= rolespec -r ansible-nginx
 notifications:
   slack:
     secure: f4s+CrjKmv58411G0QNkR5cro7MkzlIxAuujYovn/wA59LSvKNF/aK+wwrBya1IQZfH80CmcHZGKOKBVM7dDpnsEMkH5U/9Fu3NO1M8YqPcSQWSXvkEdvbkUgWoXbkUOWqxsbbe5SiBnbYDj40Z6zR5oWe/j79QmNb5Hj9UWDws=
