--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,11 @@ install: true
 script:
 - echo $TRAVIS_REPO_SLUG
 - echo $TRAVIS_BUILD_DIR
+- echo $TRAVIS_REPO_SLUG | cut -f2 -d'/'
 - git clone --depth 1 https://github.com/nickjj/rolespec
 - cd rolespec ; sudo make install; cd -
 - TRAVIS_REPO_SLUG= rolespec -i ~/testdir; ls -lR ~/testdir 
-- ln -s $TRAVIS_BUILD_DIR ~/testdir/roles/ansible-nginx/
+- ln -s $TRAVIS_BUILD_DIR ~/testdir/roles/
 - ln -s $TRAVIS_BUILD_DIR/tests/ansible-nginx/ ~/testdir/tests/
 - cd ~/testdir; TRAVIS_REPO_SLUG= rolespec -r ansible-nginx
 notifications:
