--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,21 @@
 language: python
 python: '2.7'
+env:
+  - ROLE=$(echo $TRAVIS_REPO_SLUG | cut -f2 -d'/')
 virtualenv:
   system_site_packages: true
 before_install: true
 install: true
 script:
-- echo $TRAVIS_REPO_SLUG
-- echo $TRAVIS_BUILD_DIR
-- echo $TRAVIS_REPO_SLUG | cut -f2 -d'/'
+#- echo $TRAVIS_REPO_SLUG
+#- echo $TRAVIS_BUILD_DIR
+#- echo $TRAVIS_REPO_SLUG | cut -f2 -d'/'
 - git clone --depth 1 https://github.com/nickjj/rolespec
 - cd rolespec ; sudo make install; cd -
 - TRAVIS_REPO_SLUG= rolespec -i ~/testdir; ls -lR ~/testdir 
 - ln -s $TRAVIS_BUILD_DIR ~/testdir/roles/
-- ln -s $TRAVIS_BUILD_DIR/tests/ansible-nginx/ ~/testdir/tests/
-- cd ~/testdir; TRAVIS_REPO_SLUG= rolespec -r ansible-nginx
+- ln -s $TRAVIS_BUILD_DIR/tests/$ROLE ~/testdir/tests/
+- cd ~/testdir; TRAVIS_REPO_SLUG= rolespec -r $ROLE
 notifications:
   slack:
     secure: f4s+CrjKmv58411G0QNkR5cro7MkzlIxAuujYovn/wA59LSvKNF/aK+wwrBya1IQZfH80CmcHZGKOKBVM7dDpnsEMkH5U/9Fu3NO1M8YqPcSQWSXvkEdvbkUgWoXbkUOWqxsbbe5SiBnbYDj40Z6zR5oWe/j79QmNb5Hj9UWDws=
