Tests improvements & removes default
Now this rome removes default config
Improved tests somewhat

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -3,4 +3,4 @@
   notify: Check nginx
 
 - name: Check nginx
-  wait_for: port={{ check_port | default(80) }} delay=5 timeout=10
+  wait_for: path="/var/run/nginx.pid" delay=5 timeout=10
