Changed config and removes validate
Removed validate
Added Reload handler
Improved default config

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,5 +2,9 @@
   action: service name=nginx state=restarted
   notify: Check nginx
 
+- name: Reload nginx
+  action: service name=nginx state=reloaded
+  notify: Check nginx
+
 - name: Check nginx
   wait_for: path="/var/run/nginx.pid" delay=5 timeout=10
