Adds support for keepalive and adjusts gzip
Added gzip_min_length  1000
Added support for nginx_keepalive_timeout (default: 75s)

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,5 @@
-nginx_root: /var/lib/nginx/
-nginx_worker_connections: 1024
 nginx_add_default: no
 nginx_ie8_support: yes
+nginx_keepalive_timeout: 75s
+nginx_root: /var/lib/nginx/
+nginx_worker_connections: 1024
